Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="assets/logo-purple.PNG" type="image/png">
 <meta name="theme-color" content="#6f3aff">
 
-<!-- AOS (Animate on Scroll) -->
+<!-- AOS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <style>
@@ -54,7 +54,7 @@ a{text-decoration:none;color:var(--brand)}
 .section p.sub{text-align:center;color:var(--muted);max-width:720px;margin:0 auto 30px}
 .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:20px}
 .grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:20px}
-.card{padding:22px;border:1px solid var(--line);border-radius:16px;background:#fff;box-shadow:0 3px 12px rgba(0,0,0,.03)}
+.card{padding:22px;border:1px solid var(--line);border-radius:16px;background:#fff;box-shadow:0 3px 12px rgba(0,0,0,.03);text-align:center}
 .card h3{margin-bottom:8px}
 
 /* PLANS */
@@ -123,68 +123,80 @@ footer{padding:26px 0;text-align:center;border-top:1px solid var(--line);color:#
   </div>
 </header>
 
+<!-- O QUE FAZ -->
+<section id="o-que-faz" class="section">
+  <div class="container">
+    <h2>O que o MatchWork faz</h2>
+    <p class="sub">Mais que vagas: um ecossistema de empregabilidade e evolução profissional.</p>
+    <div class="grid-3">
+      <div class="card" data-aos="fade-up"><h3>Matching rápido</h3><p>Like/dislike dos dois lados e recomendações automáticas.</p></div>
+      <div class="card" data-aos="fade-up" data-aos-delay="100"><h3>Banco de Talentos</h3><p>Perfis de candidatos ativos e profissionais empregados.</p></div>
+      <div class="card" data-aos="fade-up" data-aos-delay="200"><h3>Carreira em movimento</h3><p>Trilhas, conteúdos e Bem+Match para evolução contínua.</p></div>
+    </div>
+  </div>
+</section>
+
+<!-- COMO FUNCIONA -->
+<section id="como-funciona" class="section" style="background:var(--paper)">
+  <div class="container">
+    <h2>Como funciona</h2>
+    <p class="sub">Um fluxo único que atende empresas e profissionais.</p>
+    <div class="grid-3">
+      <div class="card" data-aos="fade-up"><h3>1) Cadastro</h3><p>Perfil completo, testes e publicação de vagas.</p></div>
+      <div class="card" data-aos="fade-up" data-aos-delay="100"><h3>2) Matching & Evolução</h3><p>Recomendações, trilhas e Bem+Match.</p></div>
+      <div class="card" data-aos="fade-up" data-aos-delay="200"><h3>3) Resultados</h3><p>Contratações rápidas e profissionais preparados.</p></div>
+    </div>
+  </div>
+</section>
+
+<!-- BEM+MATCH -->
+<section id="bemplus" class="section">
+  <div class="container">
+    <h2>Bem+Match</h2>
+    <p class="sub">Bem-estar e apoio emocional integrados à jornada profissional.</p>
+    <div class="grid-2">
+      <div class="card" data-aos="fade-right"><h3>Para profissionais</h3><p>Conteúdos e grupos de apoio para equilíbrio emocional.</p></div>
+      <div class="card" data-aos="fade-left"><h3>Para empresas</h3><p>Candidatos mais preparados e engajados.</p></div>
+    </div>
+  </div>
+</section>
+
 <!-- PLANOS -->
-<section id="planos" class="section">
+<section id="planos" class="section" style="background:var(--paper)">
   <div class="container">
     <h2>Planos para empresas</h2>
     <p class="sub">Flexibilidade para cada necessidade de contratação.</p>
     <div class="pricing">
-      <div class="plan">
-        <h3>Gratuito</h3>
-        <div class="price">R$ 0</div>
-        <ul>
-          <li>1 vaga por 7 dias</li>
-          <li>Até 5 perfis sugeridos</li>
-          <li>Contato parcial</li>
-        </ul>
-        <a class="btn primary" href="#contato">Quero testar</a>
-      </div>
-      <div class="plan recommended">
-        <h3>One-Shot</h3>
-        <div class="price">R$ 400/vaga</div>
-        <ul>
-          <li>1 vaga até ser ocupada (máx. 3 meses)</li>
-          <li>Perfis ilimitados • contato completo</li>
-          <li>Maior visibilidade</li>
-        </ul>
-        <a class="btn primary" href="#contato">Contratar</a>
-      </div>
-      <div class="plan">
-        <h3>Assinatura</h3>
-        <div class="price">R$ 150/mês</div>
-        <ul>
-          <li>Vagas ilimitadas</li>
-          <li>Perfis ilimitados • contato completo</li>
-          <li>Acesso ao Banco de Talentos</li>
-        </ul>
-        <a class="btn primary" href="#contato">Assinar</a>
-      </div>
+      <div class="plan" data-aos="zoom-in"><h3>Gratuito</h3><div class="price">R$ 0</div><ul><li>1 vaga por 7 dias</li><li>Até 5 perfis sugeridos</li><li>Contato parcial</li></ul><a class="btn primary" href="#contato">Quero testar</a></div>
+      <div class="plan recommended" data-aos="zoom-in" data-aos-delay="100"><h3>One-Shot</h3><div class="price">R$ 400/vaga</div><ul><li>1 vaga até ser ocupada (máx. 3 meses)</li><li>Perfis ilimitados • contato completo</li><li>Maior visibilidade</li></ul><a class="btn primary" href="#contato">Contratar</a></div>
+      <div class="plan" data-aos="zoom-in" data-aos-delay="200"><h3>Assinatura</h3><div class="price">R$ 150/mês</div><ul><li>Vagas ilimitadas</li><li>Perfis ilimitados • contato completo</li><li>Acesso ao Banco de Talentos</li></ul><a class="btn primary" href="#contato">Assinar</a></div>
     </div>
 
     <h2 style="margin-top:60px">Planos para candidatos</h2>
     <p class="sub">Mais chances de destaque e evolução profissional.</p>
     <div class="pricing">
-      <div class="plan">
-        <h3>Gratuito</h3>
-        <div class="price">R$ 0</div>
-        <ul>
-          <li>Acesso a todas as vagas</li>
-          <li>Participação em testes</li>
-          <li>Uso do Bem+Match</li>
-        </ul>
-        <a class="btn primary" href="#contato">Quero começar</a>
-      </div>
-      <div class="plan recommended">
-        <h3>Premium</h3>
-        <div class="price">R$ 14,90/mês</div>
-        <ul>
-          <li>Acesso prioritário a vagas</li>
-          <li>Destaque no banco de talentos</li>
-          <li>Relatório de carreira completo</li>
-        </ul>
-        <a class="btn primary" href="#contato">Assinar Premium</a>
-      </div>
+      <div class="plan" data-aos="zoom-in"><h3>Gratuito</h3><div class="price">R$ 0</div><ul><li>Acesso a todas as vagas</li><li>Participação em testes</li><li>Uso do Bem+Match</li></ul><a class="btn primary" href="#contato">Quero começar</a></div>
+      <div class="plan recommended" data-aos="zoom-in" data-aos-delay="100"><h3>Premium</h3><div class="price">R$ 14,90/mês</div><ul><li>Acesso prioritário a vagas</li><li>Destaque no banco de talentos</li><li>Relatório de carreira completo</li></ul><a class="btn primary" href="#contato">Assinar Premium</a></div>
     </div>
+  </div>
+</section>
+
+<!-- CONTATO -->
+<section id="contato" class="section">
+  <div class="container">
+    <h2>Fale com a gente</h2>
+    <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST">
+      <input type="text" name="nome" placeholder="Seu nome" required>
+      <input type="email" name="email" placeholder="E-mail" required>
+      <select name="perfil" required>
+        <option value="" disabled selected>Sou...</option>
+        <option value="empresa">Empresa</option>
+        <option value="candidato">Candidato ativo</option>
+        <option value="profissional">Profissional empregado</option>
+      </select>
+      <textarea name="mensagem" rows="4" placeholder="Sua mensagem" required></textarea>
+      <button type="submit">Enviar</button>
+    </form>
   </div>
 </section>
 
