--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MatchWork — Conectando talentos, empresas e carreiras</title>
-<meta name="description" content="MatchWork conecta empresas a candidatos ativos e profissionais já empregados que buscam capacitação, apoio emocional (Bem+Match), networking e visão de mercado.">
+<meta name="description" content="MatchWork conecta empresas a candidatos ativos e profissionais já empregados que buscam capacitação, apoio emocional (Bem+Match) e visão de mercado.">
 <link rel="icon" href="assets/logo-purple.PNG" type="image/png">
 <meta name="theme-color" content="#6f3aff">
 
@@ -28,27 +28,25 @@
 :root{
   --bg:#fff; --ink:#121426; --muted:#646b86; --line:#e9e9f2;
   --brand:#6f3aff; --brand-2:#8a67ff; --paper:#f8f7ff;
-  --accent:#efe9ff; --accent-strong:#e8e0ff;
-  --logoH: clamp(50px, 7vw, 72px);
+  --accent:#efe9ff;
 }
 *{box-sizing:border-box}
 body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;color:var(--ink);background:var(--bg)}
 a{text-decoration:none;color:var(--brand)}
-a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid var(--brand-2);outline-offset:2px}
 .container{max-width:1180px;margin:0 auto;padding:0 20px}
 
 /* NAV */
 .topbar{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--line)}
 .topbar .inner{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
 .brand{display:flex;align-items:center;gap:12px}
-.brand img{height:var(--logoH);width:auto;object-fit:contain}
+.brand img{height:clamp(50px,7vw,72px)}
 .nav-links{display:flex;align-items:center;gap:18px}
 .nav-links a{font-weight:600;color:#1b1f3a}
 .menu-toggle{display:none;border:1px solid var(--line);background:#fff;border-radius:10px;padding:8px 10px;cursor:pointer}
 .menu-toggle svg{display:block}
 
 /* BUTTONS */
-.btn{display:inline-block;padding:12px 20px;border-radius:12px;font-weight:700;border:2px solid var(--brand);transition:.18s;white-space:nowrap}
+.btn{display:inline-block;padding:12px 20px;border-radius:12px;font-weight:700;border:2px solid var(--brand);transition:.18s}
 .btn.primary{background:var(--brand);color:#fff}
 .btn.primary:hover{background:var(--brand-2);border-color:var(--brand-2)}
 .btn.ghost{background:#fff;color:var(--brand)}
@@ -59,15 +57,13 @@ a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid v
 .hero-grid{display:grid;grid-template-columns:1.05fr 1fr;gap:36px;align-items:center}
 h1{font-size:clamp(28px, 6vw, 48px);line-height:1.1;margin:0 0 14px}
 .lead{font-size:18px;color:var(--muted);max-width:720px;margin:0 0 20px}
-
-/* MOCKUP */
 .mockup{display:flex;justify-content:center;align-items:center;margin-top:12px}
 .mockup img{width:min(34vw,380px);max-width:100%;border-radius:20px;box-shadow:0 18px 40px rgba(0,0,0,.12)}
 
 /* SECTIONS */
 .section{padding:68px 0}
 .band{background:var(--paper);border-top:1px solid var(--line);border-bottom:1px solid var(--line)}
-.section h2{text-align:center;color:#1a1d33;font-size:clamp(22px,3.5vw,34px);margin:0 0 10px}
+.section h2{text-align:center;font-size:clamp(22px,3.5vw,34px);margin:0 0 10px}
 .section p.sub{text-align:center;color:var(--muted);margin:0 auto 12px;max-width:760px}
 
 /* CARDS */
@@ -77,14 +73,14 @@ h1{font-size:clamp(28px, 6vw, 48px);line-height:1.1;margin:0 0 14px}
 .card h3{margin:0 0 8px;font-size:18px}
 .card p{margin:0;color:#464b63;font-size:15px}
 
-/* TABLES */
-.table-box{background:#f5f3ff;border:1px solid #cabfff;border-radius:16px;padding:16px;margin-top:20px}
-.table-scroll{overflow:auto}
-.compare{width:100%;border-collapse:collapse;min-width:720px;background:#fff;border-radius:12px;overflow:hidden}
-.compare th,.compare td{border-bottom:1px solid var(--line);padding:12px 14px;font-size:14px;text-align:left}
-.compare thead th{background:#f1ecff;color:#2c2466;position:sticky;top:0}
-.compare tbody tr:nth-child(even){background:#fafaff}
-.price-row td{background:#f8f5ff;font-weight:700;color:var(--brand)}
+/* PRICING */
+.plans-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:20px;margin-top:30px}
+.plan{border:2px solid var(--line);border-radius:16px;padding:24px;text-align:center;background:#fff;transition:.2s}
+.plan:hover{border-color:var(--brand);box-shadow:0 6px 20px rgba(0,0,0,.08)}
+.plan h3{margin:0;font-size:20px;color:#1a1d33}
+.plan ul{list-style:none;padding:0;margin:16px 0;text-align:left;font-size:14px;color:#464b63}
+.plan ul li{margin:6px 0}
+.price{font-size:22px;font-weight:800;color:var(--brand);margin:14px 0}
 
 /* FORM */
 form{display:grid;gap:12px;max-width:460px;margin:0 auto}
@@ -114,9 +110,7 @@ footer{padding:28px 0;border-top:1px solid var(--line);text-align:center;color:#
 <!-- NAV -->
 <div class="topbar">
   <div class="container inner">
-    <a class="brand" href="#">
-      <img src="assets/logo-purple.PNG" alt="Logo MatchWork">
-    </a>
+    <a class="brand" href="#"><img src="assets/logo-purple.PNG" alt="Logo MatchWork"></a>
     <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
       <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
         <path d="M3 6h18M3 12h18M3 18h18" stroke="#3b3b3b" stroke-width="2" stroke-linecap="round"/>
@@ -195,53 +189,54 @@ footer{padding:28px 0;border-top:1px solid var(--line);text-align:center;color:#
 <!-- PLANOS -->
 <section id="planos" class="section">
   <div class="container">
-    <h2>Planos focados em preencher vagas e evoluir carreiras</h2>
-    <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
-
-    <div class="plan-note"><b>Plano Gratuito para Empresas:</b> 1 vaga por 7 dias, até 5 perfis sugeridos.</div>
-
-    <!-- Empresas -->
-    <div id="planos-empresas" class="table-box">
-      <h3>Planos para empresas</h3>
-      <div class="table-scroll">
-        <table class="compare highlight-col-3">
-          <thead>
-            <tr>
-              <th>Recursos</th>
-              <th>Gratuito</th>
-              <th>One-Shot</th>
-              <th>Assinatura</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td>Vagas ativas</td><td>1</td><td>1</td><td>Ilimitadas</td></tr>
-            <tr><td>Perfis & contato</td><td>5 • parcial</td><td>Ilimitados • completo</td><td>Ilimitados • completo</td></tr>
-            <tr><td>Banco de Talentos</td><td>—</td><td>—</td><td>Incluso</td></tr>
-            <tr class="price-row"><td>Preço</td><td>R$ 0</td><td>R$ 400 / vaga</td><td>R$ 150/mês</td></tr>
-          </tbody>
-        </table>
+    <h2>Planos para empresas</h2>
+    <p class="sub">Flexíveis e sem burocracia.</p>
+    <div id="planos-empresas" class="plans-grid">
+      <div class="plan">
+        <h3>Gratuito</h3>
+        <div class="price">R$ 0</div>
+        <ul>
+          <li>1 vaga ativa por 7 dias</li>
+          <li>Até 5 perfis sugeridos (parciais)</li>
+        </ul>
+      </div>
+      <div class="plan">
+        <h3>One-Shot</h3>
+        <div class="price">R$ 400 / vaga</div>
+        <ul>
+          <li>1 vaga ativa</li>
+          <li>Acesso ilimitado a perfis completos</li>
+        </ul>
+      </div>
+      <div class="plan">
+        <h3>Assinatura</h3>
+        <div class="price">R$ 150/mês</div>
+        <ul>
+          <li>Vagas ilimitadas</li>
+          <li>Perfis ilimitados • completos</li>
+          <li>Acesso ao Banco de Talentos</li>
+        </ul>
       </div>
     </div>
 
-    <!-- Candidatos -->
-    <div id="planos-candidato" class="table-box">
-      <h3>Planos para candidatos</h3>
-      <div class="table-scroll">
-        <table class="compare highlight-col-2">
-          <thead>
-            <tr>
-              <th>Recursos</th>
-              <th>Gratuito</th>
-              <th>Premium</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td>Acesso a vagas</td><td>Incluso</td><td>Prioritário</td></tr>
-            <tr><td>Destaque</td><td>—</td><td>Sim</td></tr>
-            <tr><td>Relatório de carreira</td><td>—</td><td>Completo</td></tr>
-            <tr class="price-row"><td>Preço</td><td>R$ 0</td><td>R$ 14,90/mês</td></tr>
-          </tbody>
-        </table>
+    <h2 style="margin-top:60px">Planos para candidatos</h2>
+    <p class="sub">Para evoluir sua carreira e ter mais oportunidades.</p>
+    <div id="planos-candidato" class="plans-grid">
+      <div class="plan">
+        <h3>Gratuito</h3>
+        <div class="price">R$ 0</div>
+        <ul>
+          <li>Acesso a vagas</li>
+        </ul>
+      </div>
+      <div class="plan">
+        <h3>Premium</h3>
+        <div class="price">R$ 14,90/mês</div>
+        <ul>
+          <li>Acesso prioritário a vagas</li>
+          <li>Destaque no app</li>
+          <li>Relatório completo de carreira</li>
+        </ul>
       </div>
     </div>
   </div>
